# phicomm-aircat-srv

./: .gitignore  Dockerfile  README.md  rust.Dockerfile
.github/workflows/: go.yml
aircat-client/: Cargo.toml
aircat-client/src/: main.rs
aircat-srv-cs/: Program.cs  aircat-srv-cs.csproj  aircatsrv.cs  config.json  message.cs  restsrv.cs
aircat-srv-go/: config.json  go.mod  main.go
aircat-srv-go/internal/: aircatsrv.go  influxdb.go  message.go  restsrv.go
aircat-srv-go/internal/aircat/: aircatsrv.go  influxdb.go  message.go  restsrv.go
aircat-srv-rs/: Cargo.toml  config.json
aircat-srv-rs/src/: main.rs
aircat-srv-rs/src/aircat/: aircatsrv.rs  influxdb.rs  message.rs  mod.rs  restsrv.rs
docker/: docker-compose.rs.yml  docker-compose.yml
docker/aircat-srv/: Dockerfile  config.json  config.rs.json
docker/grafana/provisioning/dashboards/: aircat-lobby-external.json  aircat-lobby-internal.json  dashboard.yaml
docker/grafana/provisioning/datasources/: influxdb.yaml
docs/misc/: REAME.md  buildpack-deps.dockerfile  phicomm-m1.pcap
docs/picture/: programme.puml
server/: config.json  go.mod  main.go
server/internal/: aircatsrv.go  influxdb.go  message.go  restsrv.go
