[package]
name = "aircat-srv-rs"
version = "0.1.0"
authors = ["corbamico <corbamico@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["tcp","macros","net","rt-threaded"] }
tokio-util = { version = "0.2", features = ["codec"] }
#async-stream = "0.2"

futures-preview = "0.3.0-alpha.19"
futures-util = "0.3.1"
pin-utils="0.1.0-alpha.4"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bytes = "0.5"
hex="0.4"

hyper = "0.13"